# rollingdb

./: .gitignore  CMakeLists.txt  package.sh  rdb_read.cpp  rdb_write.cpp  readme.md
cmake_modules/: FindAlprOpenCV.cmake  FindAlprSupport.cmake  Findlog4cplus.cmake
distros/debian/: changelog  control  copyright  librollingdb-dev.install  librollingdb2.install  rules
src/: chunkcollection.cpp  chunkcollection.h  lmdbchunk.cpp  lmdbchunk.h  rollingdb.cpp  rollingdb.h  rollingdb_impl.cpp  rollingdb_impl.h  system_utils.cpp  system_utils.h
tests/: CMakeLists.txt  test_rollingdb.cpp
utility/: mdb_extractimage  mdb_extractvideo  mdb_listkeys  readme.md
